match is linked ladiesssss

--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class = "decision col-lg-2 " id = "like">
-            <a href="match.html">I want it!</a>
+            <a href="match.html?project={{title}}">I want it!</a>
           </div>
         </div>
 
