templates have styleeee

--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class = "option col-sm-1 offset-md-2 navbutton">
-          <a href="sampleItem1.html">Start</a>
+          <a href="ItemTemplate.html?project=Eggs">Start</a>
         </div>
       </div>
   
