changed buttons on home page

--- a/html/home.html
+++ b/html/home.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="..js/login.js"></script>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
   </head>
   <body>
 
     <div id="signout">
-      <a href="../index.html">Sign Out</a>
+      <a href="../index.html" class="btn btn-dark">Sign Out</a>
     </div>
 
     <div class="selectbutton" id="pickup">
-      <a href="pickuptype.html">Pick Up</a>
+      <a href="pickuptype.html" class="btn btn-dark">Pick Up</a>
     </div>
 
 
     <div class="selectbutton">
-      <a href="dropofftype.html">Drop Off</a>
+      <a href="dropofftype.html" class="btn btn-dark">Drop Off</a>
     </div>
 
+    <!--link javascript-->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
