trynna local storage

--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -12,24 +12,28 @@
         <div class="row justify-content-center">
           <div class="col col-lg-10" id="pickuptype">
             <p class="title">WHICH TYPE OF FOOD WOULD YOU LIKE TO DROP OFF?</p>
-            <p class="ps"> <input type=checkbox name="produce"> produce </p>
-            <p class="ps"> <input type=checkbox name="packaged"> packaged </p>
-            <p class="ps"> <input type=checkbox name="prepared"> prepared </p>
+            <p class="ps"> <input type=checkbox id="produce"> produce </p>
+            <p class="ps"> <input type=checkbox id="packaged"> packaged </p>
+            <p class="ps"> <input type=checkbox id="prepared"> prepared </p>
           </div>
         </div>
       </div>
 
       <div class="row ">
         <div class="option col-sm-1 offset-md-4 navbutton">
-          <a href="home.html">Back</a>
+          <a href="dropOffDetails.html">Back</a>
         </div>
         
         <div class="option col-sm-1 offset-md-2 navbutton">
-          <a href="dropOffDetails.html">Next</a>
+          <a href="dropOffTime.html" id="dropofftype-submit">Next</a>
         </div>
       </div>
       
     </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+    <script src="../js/dropoff.js"></script>
+
   </body>
   
 </html>
