--- a/html/home.html
+++ b/html/home.html
@@ -19,12 +19,13 @@
 
 
     <div class="selectbutton">
-      <a href="dropofftype.html" class="btn btn-dark">Drop Off</a>
+      <a href="dropOffDetails.html" class="btn btn-dark" id="new-dropoff">Drop Off</a>
     </div>
 
     <!--link javascript-->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="../js/dropoff.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
