--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -34,7 +34,7 @@
 
       <div class="row">
         <div class = "option col-sm-1 offset-md-4 navbutton">
-          <a href="dropOffDetails.html">Back</a>
+          <a href="dropofftype.html">Back</a>
         </div>
 
         <div class = "option col-sm-1 offset-md-2 navbutton">
