changed buttons for pick up time

--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -30,8 +30,14 @@
             </div>
           </div>
         </div>
+        <!--navigation-->
+        <div class="navbutton">
+          <a href="pickuptype.html" class="btn btn-dark">Back</a>
+          <a href="ItemTemplate.html?project=Eggs" class="btn btn-dark" id="start">Start</a>
+        </div>
       </div>
 
+      <!--
       <div class="row">
         <div class = "option col-sm-1 offset-md-4 navbutton">
           <a href="pickuptype.html">Back</a>
@@ -40,9 +46,7 @@
         <div class = "option col-sm-1 offset-md-2 navbutton">
           <a href="ItemTemplate.html?project=Eggs">Start</a>
         </div>
-      </div>
-  
-
+      </div>-->
     </div>
   </body>
 </html>
