--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -12,9 +12,11 @@
         <div class="row justify-content-center">
           <div class="col col-lg-10" id="pickuptype">
             <p class="title">WHICH TYPE OF FOOD WOULD YOU LIKE TO DROP OFF?</p>
-            <p class="ps"> <input type=checkbox id="produce"> produce </p>
-            <p class="ps"> <input type=checkbox id="packaged"> packaged </p>
-            <p class="ps"> <input type=checkbox id="prepared"> prepared </p>
+            <form>
+              <p class="ps"> <input type=radio name="ps" id="produce"> produce </p>
+              <p class="ps"> <input type=radio name="ps" id="packaged"> packaged </p>
+              <p class="ps"> <input type=radio name="ps" id="prepared"> prepared </p>
+            </form>
           </div>
         </div>
       </div>
