--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class = "option col-sm-1 offset-md-2 navbutton">
-          <a href="preview.html">Next</a>
+          <a href="preview.html" id="dropofftime-submit">Next</a>
         </div>
       </div>
 
