--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -30,8 +30,16 @@
             </div>
           </div>
         </div>
+        <!--navigation-->
+        <div class="navigation">
+          <div class="navbutton">
+            <a href="dropofftype.html" class="btn btn-dark">Back</a>
+            <a href="preview.html" id="dropofftime-submit" class="next btn btn-dark">Next</a>
+          </div>
+        </div>
       </div>
 
+      <!--
       <div class="row">
         <div class = "option col-sm-1 offset-md-4 navbutton">
           <a href="dropofftype.html">Back</a>
@@ -40,7 +48,7 @@
         <div class = "option col-sm-1 offset-md-2 navbutton">
           <a href="preview.html" id="dropofftime-submit">Next</a>
         </div>
-      </div>
+      </div>-->
 
 
 
