--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -21,7 +21,7 @@
           <div class="col col-lg-10 text-left" id = "dropdown" >
             <p id = "phrase">Please select a drop off location:</p>
             <div id = "val">
-              <select name = "drop">
+              <select name = "drop" id="location">
                   <option value = "blank"> ------ </option>
                   <option value = "Price Center"> Price Center</option>
                   <option value = "Geisel"> Geisel</option>
@@ -53,5 +53,10 @@
 
 
     </div>
+    
+    <script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+    <script src="../js/dropoff.js"></script>
+
   </body>
 </html>
