dropoff detail buttons

--- a/html/dropOffDetails.html
+++ b/html/dropOffDetails.html
@@ -32,9 +32,16 @@
             <input type="file" id="uploadpic" name="uploadpic" accept="image/*" onchange="readURL(this);">
           </form>
         </div>
-        
+
+        <!--navigation-->
+        <div class="navbutton">
+          <a href="home.html" class="btn btn-dark">Back</a>
+          <a href="dropofftype.html" class="next btn btn-dark" id="dropoffinfo-submit">Next</a>
+        </div>
+
       </div>
-      
+
+      <!--
       <div class="row">
         <div class="option col-sm-1 offset-md-4 navbutton">
           <a href="home.html">Back</a>
@@ -42,8 +49,8 @@
         <div class="option col-sm-1 offset-md-2 navbutton">
           <a href="dropofftype.html" id = "dropoffinfo-submit">Next</a>
         </div>
-      </div>
-  
+      </div>-->
+
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
