--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -10,10 +10,45 @@
     <div class="container">
       <div class = "overlay">
         <div class="row justify-content-center">
-          <div class="col col-lg-10 text-left" id = "time" >
-            <p id = "phrase">Please select a drop off time range:</p>
-            <p id = "range">Start time: <input type="time" name="start-time" required/> </p>
-            <p id = "range">End time: <input type="time" name="end-time" required/> </p>
+          <div class="col col-lg-10 text-left" id = "dropdown" >
+            <p id = "phrase">Please select a pick up time range:</p>
+            <div id = "val">
+              <select name = "drop" id="hour">
+                  <option value = "null"> -- </option>
+                  <option value = "1"> 1</option>
+                  <option value = "2"> 2</option>
+                  <option value = "3"> 3</option>
+                  <option value = "4"> 4</option>
+                  <option value = "5"> 5</option>
+                  <option value = "6"> 6</option>
+                  <option value = "7"> 7</option>
+                  <option value = "8"> 8</option>
+                  <option value = "9"> 9</option>
+                  <option value = "10"> 10</option>
+                  <option value = "11"> 11</option>
+                  <option value = "12"> 12</option>
+              </select>
+              <select name = "drop" id="min">
+                <option value = "null"> -- </option>
+                <option value = "00"> 00</option>
+                <option value = "05"> 05</option>
+                <option value = "10"> 10</option>
+                <option value = "15"> 15</option>
+                <option value = "20"> 20</option>
+                <option value = "25"> 25</option>
+                <option value = "30"> 30</option>
+                <option value = "35"> 35</option>
+                <option value = "40"> 40</option>
+                <option value = "45"> 45</option>
+                <option value = "50"> 50</option>
+                <option value = "55"> 55</option>
+              </select>
+              <select name = "drop" id="day-night">
+                  <option value = "null"> -- </option>
+                  <option value = "am"> am</option>
+                  <option value = "pm"> pm</option>
+              </select>
+            </div>
           </div>
         </div>
 
@@ -53,7 +88,7 @@
 
 
     </div>
-    
+
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
     <script src="../js/dropoff.js"></script>
