redesigned no match page

--- a/html/noMatch.html
+++ b/html/noMatch.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/noPair.css" rel="stylesheet">
@@ -11,7 +13,7 @@
     <div class = "container">
         <div class = "overlay">
           <div class="row justify-content-center">
-            <h2 id = "title col-lg-4"> NO MATCH! </h2>
+            <h2 id = "title"> NO MATCH! </h2>
           </div>
 
           <div class="row justify-content-center">
@@ -19,13 +21,11 @@
               <p> Sorry you couldn't find a match! Please try a new search!</p>
             </div>
           </div>
-      </div>
-
-      <div class="row">
-        <div class = "option col-md-2 offset-md-5 navbutton">
-          <a href="home.html">Home</a>
+          <!--HOME BUTTON-->
+          <div class = "navbutton">
+            <a href="home.html"><i class="glyphicon glyphicon-home"></i></a>
+          </div>
         </div>
-      </div>
 
     </div>
 
