added about us page and link from home page

--- a/html/home.html
+++ b/html/home.html
@@ -9,17 +9,30 @@
   </head>
   <body>
 
+
+    <!--ABOUT-->
+    <div id="about">
+      <a href="about.html" class="btn btn-dark">About Us</a>
+    </div>
+
+    <!--SIGNOUT-->
     <div id="signout">
       <a href="../index.html" class="btn btn-dark">Sign Out</a>
     </div>
 
+    <!--PICK UP-->
     <div class="selectbutton" id="pickup">
       <a href="pickuptype.html" class="btn btn-dark">Pick Up</a>
     </div>
 
-
+    <!--DROP OFF-->
     <div class="selectbutton">
       <a href="dropOffDetails.html" class="btn btn-dark" id="new-dropoff">Drop Off</a>
+    </div>
+
+    <!--CURRENT MATCHES-->
+    <div  class="selectbutton">
+      <a href="meetups.html" class="btn btn-dark">Upcoming Meetups</a>
     </div>
 
     <!--link javascript-->
