--- a/html/createUser.html
+++ b/html/createUser.html
@@ -36,7 +36,7 @@
 
       <div class="navigation">
         <a href="../index.html" class="btn btn-dark" id="back">Back </a>
-        <a href="home.html" class="btn btn-dark" id="submit">Submit </a>
+        <a href="about.html" class="btn btn-dark" id="submit">Submit </a>
       </div>
 
       <!--link javascript-->
