--- a/html/dropOffDetails.html
+++ b/html/dropOffDetails.html
@@ -29,19 +29,17 @@
             <input type="text" id="allergens" class="field">
 
             <p class="info">Upload Photo </p>
-            <input type="file" id="uploadpic" accept="image/*" />
+            <input type="file" id="uploadpic" accept="image/*" onchange="encodeImageAsURL();"/>
             <!--<script type='text/javascript'>
               function encodeImageAsURL() {
-                var file = document.getElementById("uploadpic").files[0];
-                var filereader = new FileReader();
-                filereader.onload = function(fileLoadedEvent) {
-                  var srcData = fileLoadedEvent.target.result;
-                  //var newImage = document.createElement('img');
-                  //newImage.src = srcData;
-                  
-                  //document.getElementById
+                var elem = document.getElementById('uploadpic');
+                var file = elem.files[0];
+                var reader = new FileReader();
+                reader.onloadend = function() {
+                  console.log('RESULT', reader.result)
                 }
-                filereader.readAsDataURL(file);
+                reader.readAsDataURL(file);
+  
               }
             </script>-->
           </form>
