pickup query saves to ls

--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -107,7 +107,7 @@
         <div class="navigation">
           <div class="navbutton">
             <a href="dropofftype.html" class="btn btn-dark">Back</a>
-            <a href="preview.html" id="dropofftime-submit" class="next btn btn-dark">Next</a>
+            <a href="previewTemplate.html" id="dropofftime-submit" class="next btn btn-dark">Next</a>
           </div>
         </div>
       </div>
