--- a/html/previewTemplate.html
+++ b/html/previewTemplate.html
@@ -27,7 +27,7 @@
     </script>
 
     
-    <div id="templatedProjects">
+    <div id="templatedPreview">
       <!-- we will inject templated project HTML code into here -->
     </div>
     
