--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -13,7 +13,7 @@
           <div class="col col-lg-10 text-left" id = "dropdown" >
             <p id = "phrase">Please select a pick up time range:</p>
             <div id = "val">
-              <select name = "drop" id="hour">
+              <select name = "drop" id="starthour">
                 <option value = "null"> -- </option>
                 <option value = "1"> 1</option>
                 <option value = "2"> 2</option>
@@ -28,7 +28,7 @@
                 <option value = "11"> 11</option>
                 <option value = "12"> 12</option>
               </select>
-              <select name = "drop" id="min">
+              <select name = "drop" id="startmin">
                 <option value = "null"> -- </option>
                 <option value = "00"> 00</option>
                 <option value = "05"> 05</option>
@@ -43,14 +43,14 @@
                 <option value = "50"> 50</option>
                 <option value = "55"> 55</option>
               </select>
-              <select name = "drop" id="day-night">
+              <select name = "drop" id="startday-night">
                   <option value = "null"> -- </option>
                   <option value = "am"> am</option>
                   <option value = "pm"> pm</option>
               </select>
 
               <p>to</p>
-              <select name = "drop" id="hour">
+              <select name = "drop" id="endhour">
                 <option value = "null"> -- </option>
                 <option value = "1"> 1</option>
                 <option value = "2"> 2</option>
@@ -65,7 +65,7 @@
                 <option value = "11"> 11</option>
                 <option value = "12"> 12</option>
               </select>
-              <select name = "drop" id="min">
+              <select name = "drop" id="endmin">
                 <option value = "null"> -- </option>
                 <option value = "00"> 00</option>
                 <option value = "05"> 05</option>
@@ -80,7 +80,7 @@
                 <option value = "50"> 50</option>
                 <option value = "55"> 55</option>
               </select>
-              <select name = "drop" id="day-night">
+              <select name = "drop" id="endday-night">
                 <option value = "null"> -- </option>
                 <option value = "am"> am</option>
                 <option value = "pm"> pm</option>
@@ -93,7 +93,7 @@
           <div class="col col-lg-10 text-left" id = "dropdown" >
             <p id = "phrase">Please select a pick up location:</p>
             <div id = "val">
-              <select name = "drop">
+              <select name = "drop" id="location">
                   <option value = "blank"> ------ </option>
                   <option value = "Price Center"> Price Center</option>
                   <option value = "Geisel"> Geisel</option>
@@ -105,7 +105,7 @@
         <!--navigation-->
         <div class="navbutton">
           <a href="pickuptype.html" class="btn btn-dark">Back</a>
-          <a href="ItemTemplate.html?project=Eggs" class="btn btn-dark" id="start">Start</a>
+          <a href="ItemTemplate.html?project=Eggs" class="start btn btn-dark" id="pickuptime-submit">Start</a>
         </div>
       </div>
 
@@ -120,5 +120,9 @@
         </div>
       </div>-->
     </div>
+    
+    <script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+    <script src="../js/pickup.js"></script>
   </body>
 </html>
