--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 
       <form>
         <p class="userinfo">Username</p>
-        <input type="text" name="username" class="userinfo field">
+        <input type="text" id="username" class="userinfo field">
         <br /><br />
         <p class="userinfo">Password</p>
-        <input type="password" name="psw" class="userinfo field">
+        <input type="password" id="psw" class="userinfo field">
       </form>
 
       <br /><br />
-      <a href="html/home.html" class="btn btn-dark" id="login">Login</a>
-    </div>
+        <a href="html/home.html" class="btn btn-dark" id="login">Login</a>
+      </div>
+
 
 
     <div class="newuser">
@@ -37,5 +38,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 	  <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
+
   </body>
 </html>
