step by step ladies

--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -14,13 +14,13 @@
     <script id="entry-template" type="text/x-handlebars-template">
 
     <div class="overlay">
-      <h2  class ="title"> {{title}} </h2>
+      <h2  class ="title"> {{name}} </h2>
       <div>
         <div class="profile">
           <a href="userProfile.html" target="_blank" class="userinfo" id="seller">Seller: {{seller}}</a>
           <p id="rate">&starf; &starf; &starf; &starf; &starf;</p>
         </div>
-        <img src={{image}}>
+        <img src={{pic}}>
         <p class="userinfo" id="location">Location: {{location}}</p>
         <p class="userinfo" id="allergens">Allergens: {{allergens}}</p>
       </div>
