--- a/html/meetups.html
+++ b/html/meetups.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/meetups.css" rel="stylesheet">
   </head>
 
   <body>
-    this is the meetup page lol
+    <script id="entry-template" type="text/x-handlebars-template">
+      <div class="card">
+        <p class="title"> {{item}} from {{user}}! </p>
+        <div class="details">
+          <p> Time: {{time}} </p>
+          <p> Location: {{location}} </p>
+          <p> Description: {{description}} </p>
+        </div>
+      </div>
+    </script>
+
+    <div id="matches">
+      <!-- we will inject templated project HTML code into here -->
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/handlebars-v4.0.12.js"></script>
+    <script type="text/javascript" src="../js/meetups.js"></script>
   </body>
 </html>
