--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -27,7 +27,7 @@
 
 
       <div class="navigation">
-        <a href="ItemTemplate.html?project={{next}}" class="btn btn-dark userinfo" id="back">No thanks!</a>
+        <btn class="btn btn-dark userinfo" id="dislike">No thanks!</btn>
         <a href="home.html"><i class="glyphicon glyphicon-home"></i></a>
         <a href="match.html?project={{title}}" class="btn btn-dark userinfo" id="submit">I want it!</a>
       </div>
