--- a/html/pickuptype.html
+++ b/html/pickuptype.html
@@ -34,7 +34,7 @@
         <div class="navigation"> <!--each a originally wrapped in div with class navbutton-->
           <div class="navbutton">
             <a href="home.html" class="btn btn-dark">Back</a>
-            <btn class="next btn btn-dark" id="pickuptype-submit" >Next</a>
+            <btn class="next btn btn-dark" id="pickuptype-submit" >Next</btn>
           </div>
         </div>
       </div>
