--- a/html/match.html
+++ b/html/match.html
@@ -19,12 +19,12 @@
 
         <!--SELLER BUTTON-->
         <div class="row justify-content-center">
-          <a href="userProfile.html" target="_blank" class="btn btn-outline-dark btn-lg btn-block" id="name2">Seller: {{seller}}</a>
+          <a href=""  class="btn btn-outline-dark btn-lg btn-block" id="name2">Food: {{name}}</a>
         </div>
 
         <!--PHOTO OF ITEM-->
         <div id = "pic">
-          <img src = {{image}}>
+          <img src = {{pic}}>
         </div>
 
         <!--MEETING LOCATION-->
@@ -35,7 +35,7 @@
 
           <!--MEETING TIME WINDOW-->
           <div class = "info col-lg-4 " id = "time">
-            <p>{{start-time}}-{{end-time}}</p>
+            <p>{{startTime}} - {{endTime}}</p>
           </div>
         </div>
 
