--- a/html/meetups.html
+++ b/html/meetups.html
@@ -10,9 +10,9 @@
   <body>
     <script id="entry-template" type="text/x-handlebars-template">
       <div class="card">
-        <p class="title"> {{item}} from {{user}}! </p>
+        <p class="title"> {{name}} from Jerrica! </p>
         <div class="details">
-          <p> Time: {{time}} </p>
+          <p> Time: {{startTime}} - {{endTime}} </p>
           <p> Location: {{location}} </p>
           <p> Description: {{description}} </p>
         </div>
