--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -24,17 +24,17 @@
         <p class="userinfo" id="location">Location: {{location}}</p>
         <p class="userinfo" id="allergens">Allergens: {{allergens}}</p>
       </div>
+    </script> 
 
 
       <div class="navigation">
         <btn class="btn btn-dark userinfo" id="dislike">No thanks!</btn>
         <a href="home.html"><i class="glyphicon glyphicon-home"></i></a>
-        <a href="match.html?project={{title}}" class="btn btn-dark userinfo" id="submit">I want it!</a>
+        <btn class="btn btn-dark userinfo" id="submit">I want it!</btn>
       </div>
     </div>
 
 
-    </script> 
     <div id="templatedProjects">
       <!-- we will inject templated project HTML code into here -->
     </div>
