--- a/html/meetups.html
+++ b/html/meetups.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -9,6 +11,7 @@
 
   <body>
     <script id="entry-template" type="text/x-handlebars-template">
+      <a href="home.html"><i class="glyphicon glyphicon-home"></i></a>
       <div class="card">
         <p class="title"> {{name}} from Jerrica! </p>
         <div class="details">
