--- a/html/createUser.html
+++ b/html/createUser.html
@@ -28,11 +28,11 @@
         <input type="text" name="username" class="userinfo field">
       </form>
 
-
+      <!--PROFILE PIC
       <div>
         <button type="button" class="btn btn-secondary btn-sm userinfo" id="profilepic">
         Upload Profile Picture</button>
-      </div>
+      </div>-->
 
       <div class="navigation">
         <a href="../index.html" class="btn btn-dark" id="back">Back </a>
