--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -14,8 +14,32 @@
   <body>
     <!--NAVIGATION-->
     <nav class="navbar navbar-dark bg-dark">
-
+      <a class="navbar-brand" href="#">CIAOCHOW</a>
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#about">ABOUT<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#projects">PROJECTS</a>
+          <a class="nav-item nav-link" href="#contact">CONTACT</a>
+        </div>
     </nav>
+
+
+
+
+
+    <!--OLD NAVBAR
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand col-sm-9" href="#">SARAH HALL</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav col-sm-8">
+          <a class="nav-item nav-link" href="#about">ABOUT<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#projects">PROJECTS</a>
+          <a class="nav-item nav-link" href="#contact">CONTACT</a>
+        </div>
+      </div>
+    </nav>-->
 
     <!--CARDS-->
     <script id="entry-template" type="text/x-handlebars-template">
@@ -38,6 +62,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/handlebars-v4.0.12.js"></script>
-    <script type="text/javascript" src="../js/meetups.js"></script>
+    <script type="text/javascript" src="../js/meetups2.js"></script>
   </body>
 </html>
