added navbar to meetups page

--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -14,12 +14,12 @@
   <body>
 
     <!--NAVIGATION-->
-    <nav>
+    <nav id="top-section">
       <ul>
-        <li><a class="nav-item nav-link" href="home.html">Home<span class="sr-only">(current)</span></a></li>
-        <li><a class="nav-item nav-link" href="pickuptype.html">Pick Up</a></li>
-        <li><a class="nav-item nav-link" href="dropofftype.html">Drop Off</a></li>
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
+        <li><a class="nav-item nav-link" href="dropofftype.html">Drop Off</a></li>
+        <li><a class="nav-item nav-link" href="pickuptype.html">Pick Up</a></li>
+        <li><a class="nav-item nav-link" href="home.html">Home</a></li>
       </ul>
     </nav>
 
@@ -36,6 +36,7 @@
         <button id="{{name}}" class="cancel btn btn-dark">Cancel Meetup</button>
       </div>
     </script>
+
 
     <div id="matches">
       <!-- we will inject templated project HTML code into here -->
