--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -42,12 +42,9 @@
       <!-- we will inject templated project HTML code into here -->
     </div>
 
-    <script id="no-match" type="text/x-handlebars-template">
-      <p> You have no matches yet! {{variable}} </p>
-    </script>
-    
+    
     <div id="nomatches">
-    
+      <p> You have no matches yet!</p>
     </div>
 
 
