added style of no match

--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -42,9 +42,11 @@
       <!-- we will inject templated project HTML code into here -->
     </div>
 
-    
+
     <div id="nomatches">
-      <p> You have no matches yet!</p>
+      <p class="title"> You have no matches yet!</p>
+      <p>You can match with items through the Pick Up page.</p>
+      <a class="btn" href="pickuptype.html">Let's go!</a>
     </div>
 
 
