we fixed so much

--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -16,12 +16,14 @@
     <div class="overlay">
       <h2  class ="title"> {{name}} </h2>
       <div>
-        <div class="profile">
+        <!--<div class="profile">
           <a href="userProfile.html" target="_blank" class="userinfo" id="seller">Seller: {{seller}}</a>
           <p id="rate">&starf; &starf; &starf; &starf; &starf;</p>
-        </div>
+        </div>-->
         <img src={{pic}}>
+        <p class="userinfo" id="description">Details: {{description}}</p>
         <p class="userinfo" id="location">Location: {{location}}</p>
+        <p class="userinfo" id="time">Time: {{startTime}}-{{endTime}}</p>
         <p class="userinfo" id="allergens">Allergens: {{allergens}}</p>
       </div>
     </script> 
