--- a/html/home.html
+++ b/html/home.html
@@ -32,7 +32,7 @@
 
     <!--CURRENT MATCHES-->
     <div  class="selectbutton">
-      <a href="meetups.html" class="btn btn-dark">Upcoming Meetups</a>
+      <a href="meetups2.html" class="btn btn-dark">Upcoming Meetups</a>
     </div>
 
     <!--link javascript-->
