--- a/html/preview.html
+++ b/html/preview.html
@@ -12,7 +12,7 @@
     <div class="overlay">
       <h2 class="title"> Eggs </h2>
       <div>
-        <p class="userinfo" id="seller">Seller: Jerrica</p>
+        <!--<p class="userinfo" id="seller">Seller: Jerrica</p>-->
         <img src="../images/eggs.jpeg">
         <p class="userinfo" id="location">Location: Price Center</p>
         <p class="userinfo" id="allergens">Allergens: Eggs</p>
