--- a/html/dropOffDetails.html
+++ b/html/dropOffDetails.html
@@ -55,7 +55,7 @@
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
-    <script src="../js/dropoff.js"></script>
+    <script src="../js/dropoffDetails.js"></script>
 
   </body>
 
