--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -129,7 +129,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
-    <script src="../js/dropoff.js"></script>
+    <script src="../js/dropoffTime.js"></script>
 
   </body>
 </html>
