--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -42,7 +42,7 @@
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
-    <script src="../js/dropoff.js"></script>
+    <script src="../js/dropoffType.js"></script>
 
   </body>
 
