look at that LOGO ladies

--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -16,6 +16,8 @@
     <!--NAVIGATION-->
     <nav id="top-section">
       <ul>
+        <img id="logo" src="../images/logo2.png">
+  
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
         <li><a class="nav-item nav-link" href="dropofftype.html">Drop Off</a></li>
         <li><a class="nav-item nav-link" href="pickuptype.html">Pick Up</a></li>
