fixed empty preview page

--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="..js/login.js"></script>
+    <script type="text/javascript" src="../js/login.js"></script>
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
@@ -37,8 +37,8 @@
 
     <!--link javascript-->
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="../js/dropoff.js"></script>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <!--<script src="../js/dropoff.js"></script>-->
+    <script src="../js/login.js"></script>
   </body>
 </html>
