--- a/html/previewTemplate.html
+++ b/html/previewTemplate.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/login.js"></script>
+    <!--<script type="text/javascript" src="../js/login.js"></script>-->
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/preview.css" rel="stylesheet">
@@ -38,6 +38,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/handlebars-v4.0.12.js"></script>
-    <script type="text/javascript" src="../js/preview.js"></script>
+    <script src="../js/preview.js"></script>
   </body>
 </html>
