fixed position of buttons but now they don't link how sad

--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -26,22 +26,24 @@
         <p class="userinfo" id="time">Time: {{startTime}}-{{endTime}}</p>
         <p class="userinfo" id="allergens">Allergens: {{allergens}}</p>
       </div>
-    </script> 
+
 
 
       <div class="navigation">
-        <btn class="btn btn-dark userinfo" id="dislike">No thanks!</btn>
+        <btn class="btn btn-dark" id="dislike">No thanks!</btn>
         <a href="home.html"><i class="glyphicon glyphicon-home"></i></a>
-        <btn class="btn btn-dark userinfo" id="submit">I want it!</btn>
+        <btn class="btn btn-dark" id="submit">I want it!</btn>
       </div>
     </div>
 
 
+  </script>
+
     <div id="templatedProjects">
       <!-- we will inject templated project HTML code into here -->
     </div>
-  
-    
+
+
     <script src="https://code.jquery.com/jquery.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
     <script src="../js/handlebars-v4.0.12.js"></script>
